tests/cases/errors/delay_non_literal/main.sv
module Top;
  initial begin
    #(2+3);
  end
endmodule
